# procCli

./: CMakeLists.txt  LICENSE  README.md
include/proccli/: collectors.h  diagnostics.h  normalizer.h  ollama_client.h  report.h  utils.h
spec/: architecture.md  cli.md  ollama.md  overview.md  requirements.md  schema.md  testing.md
src/: collectors.cpp  diagnostics.cpp  main.cpp  normalizer.cpp  ollama_client.cpp  report.cpp  utils.cpp
tests/: collector_parsing_test.cpp  normalizer_test.cpp  report_test.cpp
